tests/__snapshots__/api-toBe-stderr.snap.txt
Error: Type 'Names' is not the same as type '{ first: string; last: string; }'.

  18 |     expect<Names>().type.toBe<{ first: string; last?: string }>();
  19 | 
  20 |     expect<Names>().type.toBe<{ first: string; last: string }>(); // fail
     |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  21 |   });
  22 | 
  23 |   test("is NOT the same as the target type", () => {

       at ./__typetests__/toBe.tst.ts:20:31 ❭ when source is a type ❭ is the same as the target type

Error: Type 'Names' is the same as type '{ first: string; last?: string | undefined; }'.

  24 |     expect<Names>().type.not.toBe<{ first: string; last: string }>();
  25 | 
  26 |     expect<Names>().type.not.toBe<{ first: string; last?: string }>(); // fail
     |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  27 |   });
  28 | 
  29 |   test("is the same as type of the target expression", () => {

       at ./__typetests__/toBe.tst.ts:26:35 ❭ when source is a type ❭ is NOT the same as the target type

Error: Type '{ first: string; last: string; }' is not the same as type 'Names'.

  31 |     expect<{ first: string; last?: string }>().type.toBe(getNames());
  32 | 
  33 |     expect<{ first: string; last: string }>().type.toBe(getNames()); // fail
     |                                                         ~~~~~~~~~~
  34 |   });
  35 | 
  36 |   test("is NOT the same as type of the target expression", () => {

       at ./__typetests__/toBe.tst.ts:33:57 ❭ when source is a type ❭ is the same as type of the target expression

Error: Type '{ first: string; last?: string | undefined; }' is the same as type 'Names'.

  37 |     expect<{ first: string; last: string }>().type.not.toBe(getNames());
  38 | 
  39 |     expect<{ first: string; last?: string }>().type.not.toBe(getNames()); // fail
     |                                                              ~~~~~~~~~~
  40 |   });
  41 | });
  42 | 

       at ./__typetests__/toBe.tst.ts:39:62 ❭ when source is a type ❭ is NOT the same as type of the target expression

Error: Type 'Names' is not the same as type '{ first: string; last: string; }'.

  46 |     expect(getNames()).type.toBe<Names>();
  47 | 
  48 |     expect(getNames()).type.toBe<{ first: string; last: string }>(); // fail
     |                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  49 |   });
  50 | 
  51 |   test("is NOT the same as the target type", () => {

       at ./__typetests__/toBe.tst.ts:48:34 ❭ when source is an expression ❭ is the same as the target type

Error: Type 'Names' is the same as type '{ first: string; last?: string | undefined; }'.

  52 |     expect(getNames()).type.not.toBe<{ first: string; last: string }>();
  53 | 
  54 |     expect(getNames()).type.not.toBe<{ first: string; last?: string }>(); // fail
     |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  55 |   });
  56 | 
  57 |   test("is the same as type of the target expression", () => {

       at ./__typetests__/toBe.tst.ts:54:38 ❭ when source is an expression ❭ is NOT the same as the target type

Error: Type '{ height: number; }' is not the same as type 'Size'.

  58 |     expect({ height: 14, width: 25 }).type.toBe(getSize());
  59 | 
  60 |     expect({ height: 14 }).type.toBe(getSize()); // fail
     |                                      ~~~~~~~~~
  61 |   });
  62 | 
  63 |   test("is NOT the same as type of the target expression", () => {

       at ./__typetests__/toBe.tst.ts:60:38 ❭ when source is an expression ❭ is the same as type of the target expression

Error: Type '{ height: number; width: number; }' is the same as type 'Size'.

  64 |     expect({ height: 14 }).type.not.toBe(getSize());
  65 | 
  66 |     expect({ height: 14, width: 25 }).type.not.toBe(getSize()); // fail
     |                                                     ~~~~~~~~~
  67 |   });
  68 | });
  69 | 

       at ./__typetests__/toBe.tst.ts:66:53 ❭ when source is an expression ❭ is NOT the same as type of the target expression

Error: Type '{ a?: number | undefined; }' is the same as type '{ a?: number | undefined; }'.

  71 |   // all four assertions pass only when '"exactOptionalPropertyTypes": true' is set
  72 | 
  73 |   expect<{ a?: number }>().type.not.toBe<{ a?: number | undefined }>();
     |                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~
  74 |   expect<{ a?: number | undefined }>().type.not.toBe<{ a?: number }>();
  75 | 
  76 |   expect<{ a?: number }>().type.not.toBeAssignableFrom<{ a?: number | undefined }>();

       at ./__typetests__/toBe.tst.ts:73:42 ❭ exact optional property types

Error: Type '{ a?: number | undefined; }' is the same as type '{ a?: number | undefined; }'.

  72 | 
  73 |   expect<{ a?: number }>().type.not.toBe<{ a?: number | undefined }>();
  74 |   expect<{ a?: number | undefined }>().type.not.toBe<{ a?: number }>();
     |                                                      ~~~~~~~~~~~~~~
  75 | 
  76 |   expect<{ a?: number }>().type.not.toBeAssignableFrom<{ a?: number | undefined }>();
  77 |   expect<{ a?: number | undefined }>().type.not.toBeAssignableTo<{ a?: number }>();

       at ./__typetests__/toBe.tst.ts:74:54 ❭ exact optional property types

Error: Type '{ a?: number | undefined; }' is assignable from type '{ a?: number | undefined; }'.

  74 |   expect<{ a?: number | undefined }>().type.not.toBe<{ a?: number }>();
  75 | 
  76 |   expect<{ a?: number }>().type.not.toBeAssignableFrom<{ a?: number | undefined }>();
     |                                                        ~~~~~~~~~~~~~~~~~~~~~~~~~~
  77 |   expect<{ a?: number | undefined }>().type.not.toBeAssignableTo<{ a?: number }>();
  78 | });
  79 | 

       at ./__typetests__/toBe.tst.ts:76:56 ❭ exact optional property types

Error: Type '{ a?: number | undefined; }' is assignable to type '{ a?: number | undefined; }'.

  75 | 
  76 |   expect<{ a?: number }>().type.not.toBeAssignableFrom<{ a?: number | undefined }>();
  77 |   expect<{ a?: number | undefined }>().type.not.toBeAssignableTo<{ a?: number }>();
     |                                                                  ~~~~~~~~~~~~~~
  78 | });
  79 | 

       at ./__typetests__/toBe.tst.ts:77:66 ❭ exact optional property types

